<resources>
    <string name="app_name">Pet Finder</string>
    <string name="camera_not_found">Camera not found.</string>
    <string name="not_found">Not Found</string>
    <string name="rescan">Rescan</string>
    <string name="scan_tag">Scan Tag</string>
    <string name="pet_info">Pet Info</string>
    <string name="pet_name">Pet Name:</string>
    <string name="pet_owner">Pet Owner:</string>
    <string name="owner_address">Owner Address:</string>
    <string name="call_owner">Call Owner</string>
    <string name="text_owner">Text Owner</string>
    <string name="search_by_id">Search By ID</string>
    <string name="scan_tag_description">Scan a QR code on the collar of a pet to retrieve owner information!</string>
    <string name="scan">Scan</string>
    <string name="scan_pet_description">Enter the unique pet identifier found on the animal\'s collar in the field below to retrieve owner information!</string>
    <string name="id">ID</string>
    <string name="search">Search</string>
    <string name="social">Social</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Name</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="add_pet">Add Pet</string>
    <string name="add_pet_description">Adding a pet within the mobile app will allow other users to scan your pet\'s tag if they ever find it. Do this to ensure your dog can be found and returned quickly, but also to allow your vet to stay up to date on your pet\'s health.</string>
    <string name="add">Add</string>
    <string name="pet_notes">Pet Notes:</string>
    <string name="pet_breed">Pet Breed:</string>
    <string name="my_pets">My Pets</string>
</resources>
