<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/scan_tag"
                        android:padding="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@android:color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/scan_tag_description"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarStyle">

                        <Button
                            android:id="@+id/scan_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/scan"
                            android:gravity="end"
                            android:textColor="@color/colorAccent"
                            style="?android:attr/borderlessButtonStyle"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/search_by_id"
                        android:padding="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@android:color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/scan_pet_description"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/search_by_id_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/id"
                            android:inputType="number"
                            android:imeOptions="actionSearch"
                            android:layout_margin="8dp"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/add_pet"
                        android:padding="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@android:color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/add_pet_description"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarStyle">

                        <Button
                            android:id="@+id/add_pet_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add"
                            android:gravity="end"
                            android:textColor="@color/colorAccent"
                            style="?android:attr/borderlessButtonStyle"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/my_pets"
                        android:padding="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@android:color/black"/>

                    <android.support.v4.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/pet_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </android.support.v4.widget.NestedScrollView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--<Button-->
            <!--android:id="@+id/scan_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/scan_tag"-->
            <!--android:layout_gravity="top"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textStyle="bold"/>-->

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginRight="16dp">-->

            <!--<EditText-->
            <!--android:id="@+id/search_by_id_edit_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:hint="@string/search_by_id"-->
            <!--android:inputType="number"-->
            <!--android:imeOptions="actionSearch"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>